--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Smart Production Management System">
     <meta name="author" content="Aleksei Avdeev">
     <meta name="keyword" content="">
-    <title>Умная система управления производством — АйоТ Системз</title>
+    <title>Умная система управления производством — Цифровая промавтоматика</title>
     <!--
       manifest.json provides metadata used when your web app is added to the
       homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
